# VideoService

./: .gitignore  Makefile  help_test  pyproject.toml
src/domain/models/: __init__.py  user.py  user_connect_request.py  user_register.py
src/domain/services/: __init__.py  cursor.py  user_connection.py  users_repository.py
src/domain/usecases/: __init__.py  login.py
tests/domain/usecases/: login_test.py
