[tool.poetry]
name = "videoservice-py"
version = "0.1.0"
description = ""
authors = ["Pato <phelipelipeoliveura@gmail.com>"]
readme = "README.md"
packages = [{include = "videoservice"}]

[tool.poetry.dependencies]
python = "^3.11"
bandit = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.group.code-quality.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
bandit = "^1.7.4"

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.mypy]
mypy_path = "src"
exclude = "tests"
explicit_package_bases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"